# Store-Fast-API

./: .coverage  .gitignore  app.py  dependencies.py  pyproject.toml  settings.py
api/endpoints/: address_endpoints.py  customer_endpoints.py  user_endpoints.py
application/schemas/: customer_schema.py  user_schema.py
application/usecases/customer/: __init__.py
application/usecases/customer/create/: command.py  handler.py
application/usecases/customer/delete/: handler.py
application/usecases/customer/get_all/: command.py  handler.py
application/usecases/customer/get_by_id/: command.py  handler.py  response.py
application/usecases/customer/update/: handler.py
application/usecases/user/: __init__.py
application/usecases/user/authenticate/: command.py  handler.py  response.py
domain/: __init__.py
domain/entities/: __init__.py  address.py  customer.py  customer_address.py  order.py  order_product.py  product.py  store.py  user.py
infrastructure/data/: database.py
infrastructure/dependency_injection/: container.py
infrastructure/repositories/: customer_repository.py  user_repository.py
infrastructure/security/: security.py  token.py
test/: conftest.py
test/application/usecases/customer/create/: test_handler.py
test/application/usecases/customer/delete/: test_handler.py
test/application/usecases/customer/get_all/: test_handler.py
test/application/usecases/customer/get_by_id/: test_handler.py
test/configuration/: fake_data.py
test/infrastructure/data/: test_db.py
test/infrastructure/security/: test_password_hash.py  test_token.py
(+2 files in other folders)
