[project]
name = 'store-api'
version = '1.0.0'
description = 'Add your description here'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    'alembic>=1.18.4',
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.1",
    "factory-boy>=3.3.3",
    'fastapi[standard]>=0.138.0',
    'psycopg2-binary>=2.9.12',
    'pwdlib[argon2]>=0.3.0',
    "pyjwt>=2.13.0",
    "pytest-asyncio>=1.4.0",
    'sqlacodegen>=4.0.4',
    "sqlalchemy[asyncio]>=2.0.51",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = ['pytest>=9.1.1', 'pytest-cov>=7.1.0', 'ruff>=0.15.18', 'taskipy>=1.14.1']

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = '-p no:warnings'
asyncio_mode = 'auto'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev .\app.py '
test = 'pytest --cov=. -vv'
post_test = 'coverage html'
